force-app/main/default/objects/HOC__Volunteer_Opportunity__c/HOC__Volunteer_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Volunteer Opportunity</label>
    <nameField>
        <label>Volunteer Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>