force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/Company_Agency_Match__c.field-meta.xml
<CustomField>
    <fullName>Company_Agency_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>links back to the custom info we created to match this company and agency.  please do not edit.</inlineHelpText>
    <label>Company Agency Match</label>
    <referenceTo>Company_Agency_Match__c</referenceTo>
    <relationshipLabel>Volunteer Opportunities</relationshipLabel>
    <relationshipName>Volunteer_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>