force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>HOC__Activity_Type__c</fullName>
    <inlineHelpText>Recognition - i.e. Volunteer Recognition events 
Training - courses of any kind 
Academy - &apos;citizen academy&apos; — enhances learning of community values and impact (book clubs, film series, etc) 
Social - parties, thank-you events, etc.</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HOC__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Recognition</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Academy</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>