force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Age_Groups_Served__c.field-meta.xml
<CustomField>
    <fullName>HOC__Age_Groups_Served__c</fullName>
    <label>Age Groups Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Children &amp; Youth (under 18)</fullName>
            </value>
            <value>
                <fullName>Adult (18-65)</fullName>
            </value>
            <value>
                <fullName>Seniors (over 65)</fullName>
            </value>
            <value>
                <fullName>All ages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>