force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Apply_Restrictions_to_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>HOC__Apply_Restrictions_to_Opportunity__c</fullName>
    <label>Apply Restrictions to Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HOC__Registration_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Apply Restrictions</fullName>
            </value>
            <value>
                <fullName>Do NOT Apply Restrictions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>