force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__ARS_Workflow_to_Display__c.field-meta.xml
<CustomField>
    <fullName>HOC__ARS_Workflow_to_Display__c</fullName>
    <label>ARS Workflow to Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>