force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Available_Languages__c.field-meta.xml
<CustomField>
    <fullName>HOC__Available_Languages__c</fullName>
    <defaultValue>$Setup.HOC__App_Settings__c.HOC__Language__c</defaultValue>
    <description>Set all the available languages for this opportunity.</description>
    <inlineHelpText>Set all the available languages for this opportunity.</inlineHelpText>
    <label>Available Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HOC__Available_Languages</valueSetName>
    </valueSet>
</CustomField>