force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Background_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>HOC__Background_Check_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Background Check Required</label>
    <type>Checkbox</type>
</CustomField>