force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__City__c.field-meta.xml
<CustomField>
    <fullName>HOC__City__c</fullName>
    <formula>HOC__City_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>