force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__City_Text__c.field-meta.xml
<CustomField>
    <fullName>HOC__City_Text__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>