force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Country__c.field-meta.xml
<CustomField>
    <fullName>HOC__Country__c</fullName>
    <formula>HOC__Country_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>