force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Court_Ordered_Allowed__c.field-meta.xml
<CustomField>
    <fullName>HOC__Court_Ordered_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Court Ordered Allowed</label>
    <type>Checkbox</type>
</CustomField>