force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__CreationSource__c.field-meta.xml
<CustomField>
    <fullName>HOC__CreationSource__c</fullName>
    <label>CreationSource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>