force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Default_Location__c.field-meta.xml
<CustomField>
    <fullName>HOC__Default_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Location</label>
    <referenceTo>HOC__Location__c</referenceTo>
    <relationshipLabel>Volunteer Opportunities</relationshipLabel>
    <relationshipName>Volunteer_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>