force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Description__c.field-meta.xml
<CustomField>
    <fullName>HOC__Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>