force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Disaster_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>HOC__Disaster_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disaster Opportunity</label>
    <type>Checkbox</type>
</CustomField>