force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Disaster_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>HOC__Disaster_Opportunity_Type__c</fullName>
    <label>Disaster Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emergency Preparedness</fullName>
            </value>
            <value>
                <fullName>Disaster Response &amp; Recovery</fullName>
            </value>
            <value>
                <fullName>Not Disaster Related</fullName>
                <default>true</default>
                <label>Not Disaster Related</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>