force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__EditionSource__c.field-meta.xml
<CustomField>
    <fullName>HOC__EditionSource__c</fullName>
    <description>Used in WF to determine if the record was updated from 3.0.</description>
    <inlineHelpText>Used in WF to determine if the record was updated from 3.0.</inlineHelpText>
    <label>EditionSource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>