force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__End_Date__c.field-meta.xml
<CustomField>
    <fullName>HOC__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>