force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>HOC__End_Date_Time__c</fullName>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>