force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Genders_Served__c.field-meta.xml
<CustomField>
    <fullName>HOC__Genders_Served__c</fullName>
    <label>Genders Served</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male Only</fullName>
            </value>
            <value>
                <fullName>All Genders Served</fullName>
                <default>true</default>
                <label>All Genders Served</label>
            </value>
            <value>
                <fullName>Female Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>