force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Google_Map_URL__c.field-meta.xml
<CustomField>
    <fullName>HOC__Google_Map_URL__c</fullName>
    <formula>HYPERLINK(HOC__Default_Location__r.HOC__Google_Map_URL__c, HOC__Default_Location__r.HOC__Google_Map_URL__c)</formula>
    <label>Google Map URL</label>
    <type>Text</type>
</CustomField>