force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Guest_Volunteer_Number_Hours_Served__c.field-meta.xml
<CustomField>
    <fullName>HOC__Guest_Volunteer_Number_Hours_Served__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SUM Connection: Number Guest Hours Served</description>
    <label>Guest Volunteer Hours Served</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>