force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Guest_Volunteers_Attended__c.field-meta.xml
<CustomField>
    <fullName>HOC__Guest_Volunteers_Attended__c</fullName>
    <label>Guest Volunteers Attended</label>
    <summarizedField>HOC__Connection__c.HOC__Guest_Volunteers__c</summarizedField>
    <summaryFilterItems>
        <field>HOC__Connection__c.HOC__Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Attended (and Hours Verified)</value>
    </summaryFilterItems>
    <summaryForeignKey>HOC__Connection__c.HOC__Volunteer_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>