force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__HOC_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>HOC__HOC_Domain_Name__c</fullName>
    <formula>HOC__Hosting_Organization__r.HOC__HOC_Domain_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOC Domain Name</label>
    <type>Text</type>
</CustomField>