force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__HOC_ID__c.field-meta.xml
<CustomField>
    <fullName>HOC__HOC_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>HOC ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>