force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__HON_Signature_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>HOC__HON_Signature_Initiatives__c</fullName>
    <label>HON Signature Initiatives</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Season of Service (Fall)</fullName>
            </value>
            <value>
                <fullName>Created for Give a Day. Get a Disney Day</fullName>
            </value>
            <value>
                <fullName>HandsOn Schools (annual)</fullName>
            </value>
            <value>
                <fullName>Neighboring Initiative (annual)</fullName>
            </value>
            <value>
                <fullName>Kids Care</fullName>
            </value>
            <value>
                <fullName>VIRE- Grant Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>