force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Hosting_Organization__c.field-meta.xml
<CustomField>
    <fullName>HOC__Hosting_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Hosting organization is always the HandsOn Action Center.  This field is used for feeds pushed to HandsOn Network searches and other national search platforms.</inlineHelpText>
    <label>Hosting Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volunteer Opportunities (Hosting Organization)</relationshipLabel>
    <relationshipName>Volunteer_Opportunity_Hosting_Org</relationshipName>
    <type>Lookup</type>
</CustomField>