force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Hosting_Syndication_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>HOC__Hosting_Syndication_Logo_URL__c</fullName>
    <inlineHelpText>Opportunities listed in HandsOn Connect are available for national search through HandsOn Network and other national search sites.  This URL (http://locationofyourlogo.com) is used to include your logo in those searches that incorporate logos.</inlineHelpText>
    <label>Hosting Syndication Logo URL</label>
    <type>Url</type>
</CustomField>