force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Image_Url_Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>HOC__Image_Url_Thumbnail__c</fullName>
    <description>Field to support handling of image related to each Opp in HOC3Site features</description>
    <label>Image Url Thumbnail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>