force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Import_ID__c.field-meta.xml
<CustomField>
    <fullName>HOC__Import_ID__c</fullName>
    <externalId>true</externalId>
    <label>Import ID</label>
    <length>42</length>
    <type>Text</type>
</CustomField>