force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Include_Pending_for_Max_Attendance__c.field-meta.xml
<CustomField>
    <fullName>HOC__Include_Pending_for_Max_Attendance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if volunteers in pending approval status are included when evaluating the registered attendance.</description>
    <inlineHelpText>When checked all the occurrences associated with this volunteer opportunity will include connections in Pending Approval status when evaluating if an occurrence is full.</inlineHelpText>
    <label>Include Pending for Max Attendance</label>
    <type>Checkbox</type>
</CustomField>