force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Invitation_Code__c.field-meta.xml
<CustomField>
    <fullName>HOC__Invitation_Code__c</fullName>
    <formula>HOC__Requires_Invitation_From__r.HOC__Invitation_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to reserve volunteer opportunities for the contacts associated with a particular organization. The Invitation Code is provided to the employees and must be entered on the public site in order to make these opportunities visible.</inlineHelpText>
    <label>Invitation Code</label>
    <type>Text</type>
</CustomField>