force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__LastModifiedByV2__c.field-meta.xml
<CustomField>
    <fullName>HOC__LastModifiedByV2__c</fullName>
    <label>LastModifiedByV2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>