force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Managed_By__c.field-meta.xml
<CustomField>
    <fullName>HOC__Managed_By__c</fullName>
    <inlineHelpText>Value once set cannot be changed</inlineHelpText>
    <label>Managed By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>