force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Managing_Entity__c.field-meta.xml
<CustomField>
    <fullName>HOC__Managing_Entity__c</fullName>
    <label>Managing Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>