force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Managing_Individual__c.field-meta.xml
<CustomField>
    <fullName>HOC__Managing_Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managing Individual</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Opportunities (Managing Individual)</relationshipLabel>
    <relationshipName>Volunteer_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>