force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Managing_Organization__c.field-meta.xml
<CustomField>
    <fullName>HOC__Managing_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managing Organization</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.HOC__Status__c</field>
            <operation>equals</operation>
            <value>Active Partner</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>HOC Customer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volunteer Opportunities</relationshipLabel>
    <relationshipName>Volunteer_Opportunity_Managing_Org</relationshipName>
    <type>Lookup</type>
</CustomField>