force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Managing_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>HOC__Managing_Organization_Name__c</fullName>
    <formula>HOC__Managing_Organization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is populated automatically from your selection in the &quot;Managing Organization&quot; field.  The field is used when populating text in e-mail notices, etc.</inlineHelpText>
    <label>Managing Organization Name</label>
    <type>Text</type>
</CustomField>