force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Maximum_Attendance__c.field-meta.xml
<CustomField>
    <fullName>HOC__Maximum_Attendance__c</fullName>
    <label>Maximum Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>