force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Maximum_Waitlist__c.field-meta.xml
<CustomField>
    <fullName>HOC__Maximum_Waitlist__c</fullName>
    <description>This field is used to indicate the maximum number of waitlisted volunteers for an occurrence.</description>
    <inlineHelpText>Populate this field with the maximum number of volunteers you will allow to be on the waitlist.</inlineHelpText>
    <label>Maximum Waitlist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>