force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Minimum_Age_w_adult__c.field-meta.xml
<CustomField>
    <fullName>HOC__Minimum_Age_w_adult__c</fullName>
    <label>Minimum Age (w/ adult)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>