force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Minimum_Attendance__c.field-meta.xml
<CustomField>
    <fullName>HOC__Minimum_Attendance__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Minimum Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>