force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Minor_Waiver_on_File_Required__c.field-meta.xml
<CustomField>
    <fullName>HOC__Minor_Waiver_on_File_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minor Waiver on File Required</label>
    <type>Checkbox</type>
</CustomField>