force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__National_Community_Impact_Goals__c.field-meta.xml
<CustomField>
    <fullName>HOC__National_Community_Impact_Goals__c</fullName>
    <label>National Impact Goals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Environment - Cultivate greener communities</fullName>
            </value>
            <value>
                <fullName>Economy - Grow prosperous neighborhoods</fullName>
            </value>
            <value>
                <fullName>Education - Support kids’ success</fullName>
            </value>
            <value>
                <fullName>Emergency - Preparedness, Response and Recovery</fullName>
            </value>
            <value>
                <fullName>Veterans and Military Families</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>