force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__National_Service_Events__c.field-meta.xml
<CustomField>
    <fullName>HOC__National_Service_Events__c</fullName>
    <label>National Service Events</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9/11 National Day of Service and Remembrance (Sept)</fullName>
            </value>
            <value>
                <fullName>Earth Day                                  (April)</fullName>
            </value>
            <value>
                <fullName>Family Volunteer Day                 (Nov)</fullName>
            </value>
            <value>
                <fullName>Global Youth Service Day           (April)</fullName>
            </value>
            <value>
                <fullName>Make a Difference Day   (Oct)</fullName>
            </value>
            <value>
                <fullName>Martin Luther King Jr. Day    (Jan)</fullName>
            </value>
            <value>
                <fullName>National Volunteer Week       (April)</fullName>
            </value>
            <value>
                <fullName>Veterans Day (November)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>