force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Number_of_Volunteer_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>HOC__Number_of_Volunteer_Opportunities__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of  Volunteer Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>