force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Opportunity_Approval_Manager__c.field-meta.xml
<CustomField>
    <fullName>HOC__Opportunity_Approval_Manager__c</fullName>
    <formula>HOC__Managing_Organization__r.HOC__Opportunity_Approval_Manager__r.FirstName + &apos; &apos; + HOC__Managing_Organization__r.HOC__Opportunity_Approval_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Approval Manager</label>
    <type>Text</type>
</CustomField>