force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Opportunity_Approval_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>HOC__Opportunity_Approval_Manager_Email__c</fullName>
    <description>Auto populate Opportunity Approval Manager from Organization</description>
    <label>Opportunity Approval Manager Email</label>
    <type>Email</type>
</CustomField>