force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Opportunity_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>HOC__Opportunity_Characteristics__c</fullName>
    <label>Opportunity Characteristics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Holiday Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>