force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Opportunity_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>HOC__Opportunity_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Coordinator</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a valid contact.</errorMessage>
        <filterItems>
            <field>Contact.HOC__Username__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <infoMessage>You can only assign contacts with the username field populated as Opportunity Coordinators.
If you do not see the contact you need in the search results, please contact the staff at the volunteer center to verify the contact record.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Opportunities</relationshipLabel>
    <relationshipName>Volunteer_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>