force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Organization_Served__c.field-meta.xml
<CustomField>
    <fullName>HOC__Organization_Served__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization Served</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>Account.HOC__Status__c</field>
            <operation>equals</operation>
            <value>Active Partner</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>HOC Customer</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Employee Coordinator</value>
        </filterItems>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <valueField>Account.CreatedById</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volunteer Opportunities (Organization Served)</relationshipLabel>
    <relationshipName>Volunteer_Opportunity_Org_Served</relationshipName>
    <type>Lookup</type>
</CustomField>