force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Organization_Served_Id__c.field-meta.xml
<CustomField>
    <fullName>HOC__Organization_Served_Id__c</fullName>
    <description>Used in the Service Hours Reports</description>
    <formula>HOC__Organization_Served__r.Id</formula>
    <label>Organization Served Id</label>
    <type>Text</type>
</CustomField>