force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Organization_Served_Name__c.field-meta.xml
<CustomField>
    <fullName>HOC__Organization_Served_Name__c</fullName>
    <formula>HOC__Organization_Served__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is populated automatically from your selection in the &quot;Organization Served&quot; field.  The field is used when populating text in e-mail notices, etc.</inlineHelpText>
    <label>Organization Served Name</label>
    <type>Text</type>
</CustomField>