force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Organization_Served_URL__c.field-meta.xml
<CustomField>
    <fullName>HOC__Organization_Served_URL__c</fullName>
    <inlineHelpText>The URL provides a quick link to view the Organization&apos;s page as it appears on the public site.</inlineHelpText>
    <label>Organization Served URL</label>
    <type>Url</type>
</CustomField>