force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Orientation_Required__c.field-meta.xml
<CustomField>
    <fullName>HOC__Orientation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orientation Required</label>
    <type>Checkbox</type>
</CustomField>