force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__OwnerIdV2__c.field-meta.xml
<CustomField>
    <fullName>HOC__OwnerIdV2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OwnerIdV2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Opportunities (OwnerIdV2)</relationshipLabel>
    <relationshipName>Volunteer_Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>