force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Partner_Staff_Email__c.field-meta.xml
<CustomField>
    <fullName>HOC__Partner_Staff_Email__c</fullName>
    <label>Partner Staff Email</label>
    <type>Email</type>
</CustomField>