force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Partner_Staff_Name__c.field-meta.xml
<CustomField>
    <fullName>HOC__Partner_Staff_Name__c</fullName>
    <formula>IF(  ISPICKVAL(HOC__Managed_By__c, &apos;Partner&apos;),  HOC__Managing_Organization__r.Name , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Staff Name</label>
    <type>Text</type>
</CustomField>