force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Populations_Served__c.field-meta.xml
<CustomField>
    <fullName>HOC__Populations_Served__c</fullName>
    <inlineHelpText>Populations served refers to the target populations of individuals (or animals) benefiting from the volunteer opportunity.  These items are set at the national level and can not be altered.</inlineHelpText>
    <label>Populations Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Families</fullName>
            </value>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>Immigrants, Refugees or Ethnic Groups</fullName>
            </value>
            <value>
                <fullName>LGBT(Lesbian, Gay, Bisexual,Transgender)</fullName>
            </value>
            <value>
                <fullName>Low-income Communities</fullName>
            </value>
            <value>
                <fullName>Military/Veterans</fullName>
            </value>
            <value>
                <fullName>Offenders/Ex-offenders</fullName>
            </value>
            <value>
                <fullName>People with Disabilities</fullName>
            </value>
            <value>
                <fullName>People with Health-based Concerns</fullName>
            </value>
            <value>
                <fullName>Visitors &amp; Travelers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>